--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ noinclude/
 # xtend Generated Sources
 src/main/generated-sources
 src/test/generated-sources
+src/main/xtend-gen
+src/test/xtend-gen
 
 # jnario generated files
 doc-gen
