minor config change

--- a/src/main/java/application.conf
+++ b/src/main/java/application.conf
@@ -45,12 +45,12 @@ from.selected = ${?FROM_SELECTED}
 //******
 against.dev
 {
-   lcxUrl = "https://com.inadco.lcx.dev.inadco.com"
+   lcxUrl = "https://lcx.dev.inadco.com"
 }
 
 against.qa
 {
-   lcxUrl = "https://com.inadco.lcx.qa.inadco.com"
+   lcxUrl = "https://lcx.qa.inadco.com"
 }
 
 against.selected = ${against.dev} //default
