added Properties to application config for TestDataStore

--- a/src/main/java/application.conf
+++ b/src/main/java/application.conf
@@ -46,11 +46,20 @@ from.selected = ${?FROM_SELECTED}
 against.dev
 {
    lcxUrl = "https://lcx.dev.inadco.com"
+   useTestDataStore = "false"
 }
 
 against.qa
 {
    lcxUrl = "https://lcx.qa.inadco.com"
+   useTestDataStore = "false"
+}
+
+against.acceptance
+{
+   lcxUrl = "https://lcx.-DOES_NOT_EXIST-.inadco.com"
+   useTestDataStore = "true"
+   
 }
 
 against.selected = ${against.dev} //default
@@ -61,7 +70,9 @@ against.selected = ${?AGAINST_SELECTED}
 internal
 {
    siteModel = "/res/SiteModel.csv"
+   testDataStore = "-DOES_NOT_EXIST-"
    
+   useTestDataStore = {against.selected.useTestDataStore}
    lcxUrl = ${against.selected.lcxUrl}
    webdriver = ${from.selected.webdriver}
    
