--- a/src/main/java/application.conf
+++ b/src/main/java/application.conf
@@ -59,7 +59,6 @@ against.acceptance
 {
    lcxUrl = "https://lcx.-DOES_NOT_EXIST-.inadco.com"
    useTestDataStore = "true"
-   
 }
 
 against.selected = ${against.dev} //default
@@ -72,8 +71,7 @@ internal
    siteModel = "/res/SiteModel.csv"
    testDataStore = "-DOES_NOT_EXIST-"
    
-   useTestDataStore = {against.selected.useTestDataStore}
+   useTestDataStore = ${against.selected.useTestDataStore}
    lcxUrl = ${against.selected.lcxUrl}
    webdriver = ${from.selected.webdriver}
-   
 }
