added ability to create new DataItems using .csv definition file

--- a/src/main/java/application.conf
+++ b/src/main/java/application.conf
@@ -69,6 +69,7 @@ against.selected = ${?AGAINST_SELECTED}
 internal
 {
    siteModel = "/res/SiteModel.csv"
+   dataItems = "/res/DataItems.csv"
    testDataStore = "-DOES_NOT_EXIST-"
    
    useTestDataStore = ${against.selected.useTestDataStore}
