fix broken tests

--- a/src/main/java/application.conf
+++ b/src/main/java/application.conf
@@ -68,8 +68,8 @@ against.selected = ${?AGAINST_SELECTED}
 //internal config - this should not change
 internal
 {
-   siteModel = "/res/SiteModel.csv"
-   dataItems = "/res/DataItems.csv"
+   siteModel = "SiteModel.csv"
+   dataItems = "DataItems.csv"
    testDataStore = "-DOES_NOT_EXIST-"
    
    useTestDataStore = ${against.selected.useTestDataStore}
