added aperproject to test modularity changed some tests for FileHelper to use aperproject

--- a/src/test/java/com/inadco/aperproject/res/application.conf
+++ b/src/test/java/com/inadco/aperproject/res/application.conf
@@ -16,7 +16,7 @@
 //******
 
 FROM_SELECTED = ${from.local} //from.maven, from.local
-AGAINST_SELECTED = ${against.qa} //against.dev, against.qa
+AGAINST_SELECTED = ${against.dev} //against.dev, against.qa
 
 //****** 
 //* from profiles
@@ -68,8 +68,8 @@ against.selected = ${?AGAINST_SELECTED}
 //internal config - this should not change
 internal
 {
-   siteModel = "SiteModel.csv"
-   dataItems = "DataItems.csv"
+   siteModel = "/res/SiteModel.csv"
+   dataItems = "/res/DataItems.csv"
    testDataStore = "-DOES_NOT_EXIST-"
    
    useTestDataStore = ${against.selected.useTestDataStore}
