Small changes for readability, make SettingsBasedDataGenerator a monostate.

--- a/src/main/java/application.conf
+++ b/src/main/java/application.conf
@@ -45,19 +45,19 @@ from.selected = ${?FROM_SELECTED}
 //******
 against.dev
 {
-   lcxUrl = "https://lcx.dev.inadco.com"
+   siteUrl = "https://lcx.dev.inadco.com"
    useTestDataStore = "false"
 }
 
 against.qa
 {
-   lcxUrl = "https://lcx.qa.inadco.com"
+   siteUrl = "https://lcx.qa.inadco.com"
    useTestDataStore = "false"
 }
 
 against.acceptance
 {
-   lcxUrl = "https://lcx.-DOES_NOT_EXIST-.inadco.com"
+   siteUrl = "https://lcx.-DOES_NOT_EXIST-.inadco.com"
    useTestDataStore = "true"
 }
 
@@ -73,6 +73,6 @@ internal
    testDataStore = "-DOES_NOT_EXIST-"
    
    useTestDataStore = ${against.selected.useTestDataStore}
-   lcxUrl = ${against.selected.lcxUrl}
+   siteUrl = ${against.selected.lcxUrl}
    webdriver = ${from.selected.webdriver}
 }
