replaced framework's application.conf with reference.conf, removed extraneous application.conf files, .csv files

--- a/src/main/java/reference.conf
+++ b/src/main/java/reference.conf
@@ -16,7 +16,7 @@
 //******
 
 FROM_SELECTED = ${from.local} //from.maven, from.local
-AGAINST_SELECTED = ${against.dev} //against.dev, against.qa
+AGAINST_SELECTED = ${against.qa} //against.dev, against.qa
 
 //****** 
 //* from profiles
@@ -45,19 +45,19 @@ from.selected = ${?FROM_SELECTED}
 //******
 against.dev
 {
-   lcxUrl = "https://lcx.dev.inadco.com"
+   siteUrl = "https://lcx.dev.inadco.com"
    useTestDataStore = "false"
 }
 
 against.qa
 {
-   lcxUrl = "https://lcx.qa.inadco.com"
+   siteUrl = "https://lcx.qa.inadco.com"
    useTestDataStore = "false"
 }
 
 against.acceptance
 {
-   lcxUrl = "https://lcx.-DOES_NOT_EXIST-.inadco.com"
+   siteUrl = "https://lcx.-DOES_NOT_EXIST-.inadco.com"
    useTestDataStore = "true"
 }
 
@@ -68,11 +68,11 @@ against.selected = ${?AGAINST_SELECTED}
 //internal config - this should not change
 internal
 {
-   siteModel = "/res/SiteModel.csv"
-   dataItems = "/res/DataItems.csv"
+   siteModel = "SiteModel.csv"
+   dataItems = "DataItems.csv"
    testDataStore = "-DOES_NOT_EXIST-"
    
    useTestDataStore = ${against.selected.useTestDataStore}
-   lcxUrl = ${against.selected.lcxUrl}
+   siteUrl = ${against.selected.siteUrl}
    webdriver = ${from.selected.webdriver}
 }
