now using AcceptanceContext

--- a/src/main/java/reference.conf
+++ b/src/main/java/reference.conf
@@ -75,4 +75,5 @@ internal
    useTestDataStore = ${against.selected.useTestDataStore}
    siteUrl = ${against.selected.siteUrl}
    webdriver = ${from.selected.webdriver}
+   loglevel = "ALL"
 }
