added undertest resources, framework settings, framework context

--- a/src/test/java/undertest/example/example.conf
+++ b/src/test/java/undertest/example/example.conf
@@ -58,10 +58,10 @@ against.selected = ${against.dev} //default
 against.selected = ${?AGAINST_SELECTED}
 
 
-//*** config to use - this should not change ***
+/*** config to use - this should not change ***/
 use
 {
-   siteModel = "lcx/resources/SiteModel.csv"
+   siteModel = "SiteModel.tsv"
    dataItems = "DataItems.csv"
    testDataStore = "-DOES_NOT_EXIST-"
    
