--- a/src/test/java/undertest/lcx/lcx.conf
+++ b/src/test/java/undertest/lcx/lcx.conf
@@ -1,4 +1,3 @@
-
 //****** 
 //* This is the main entry point for this application's configuration
 //******
@@ -62,7 +61,7 @@ against.selected = ${?AGAINST_SELECTED}
 use
 {
    siteModel = "lcx/resources/SiteModel.csv"
-   dataItems = "DataItems.csv"
+   dataItems = "lcx/resources/DataItems.csv"
    testDataStore = "-DOES_NOT_EXIST-"
    
    useTestDataStore = ${against.selected.useTestDataStore}
